# actix_tryout

./: .env  Cargo.toml  README.md  actrix.dockerfile  docker-compose.yml
sql/: database.sql
src/: config.rs  db.rs  main.rs  models.rs
