[package]
name = "actrix-tryouts"
version = "0.1.0"
authors = ["Çağlar Dursun <dursuncaglar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.1.0"
serde={version= "1.0.116", features= ["derive"]}
dotenv="0.15.0"
config="0.10.1"
tokio-pg-mapper="0.1.8"
tokio-pg-mapper-derive="0.1.5"
deadpool-postgres="0.5.6"
tokio-postgres="0.5.5"