[package]
name = "actrix-tryouts"
version = "0.1.0"
authors = ["Çağlar Dursun <dursuncaglar@gmail.com>"]
edition = "2018"

[features]
default = []

# Integration tests
integration = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.1.0"
actix-http = "2.0.0"
actix-service = "1.0.6"
futures = "0.3.4"
serde = { version = "1.0.104", features = ["derive"] }
dotenv = "0.15.0"
config = "0.10.1"
tokio-pg-mapper = "0.1.4"
tokio-pg-mapper-derive = "0.1.4"
deadpool-postgres = "0.5.0"
tokio-postgres = "0.5.1"
slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"
slog-envlogger = "2.2.0"